--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "bot"}]
 python = "^3.10"
 aiogram = "^3.2.0"
 asyncio = "^3.4.3"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
