--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.10"
 aiogram = "^3.2.0"
 asyncio = "^3.4.3"
 python-dotenv = "^1.0.0"
+psycopg2-binary = "^2.9.9"
+pytz = "^2023.3.post1"
 
 
 [tool.poetry.group.dev.dependencies]
