--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ asyncio = "^3.4.3"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.9"
 pytz = "^2023.3.post1"
+flask = "^3.0.0"
+requests = "^2.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
