--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ flask = "^3.0.0"
 requests = "^2.31.0"
 
 
+[tool.poetry.scripts]
+bot = "bot.bot:main"
+
+
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
 
